[gd_scene load_steps=4 format=2]

[ext_resource path="res://Hud.gd" type="Script" id=1]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WaveInfo" type="Label" parent="."]
margin_left = 128.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 22.0
theme = ExtResource( 3 )
text = "Wave 1/X"
align = 1

[node name="WaveNotify" type="Label" parent="."]
visible = false
margin_left = 64.0
margin_top = 80.0
margin_right = 128.0
margin_bottom = 94.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 3 )
text = "Wave X"
align = 1

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FinishSuccess" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="FinishSuccess"]
margin_left = 72.0
margin_top = 56.0
margin_right = 244.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="FinishSuccess/VBoxContainer"]
margin_right = 172.0
margin_bottom = 8.0
text = "Level Completed :)"
align = 1

[node name="HSeparator" type="HSeparator" parent="FinishSuccess/VBoxContainer"]
margin_top = 12.0
margin_right = 172.0
margin_bottom = 22.0

[node name="Next" type="Button" parent="FinishSuccess/VBoxContainer"]
margin_top = 26.0
margin_right = 172.0
margin_bottom = 46.0
text = "Next Level"

[node name="Menu" type="Button" parent="FinishSuccess/VBoxContainer"]
margin_top = 50.0
margin_right = 172.0
margin_bottom = 70.0
text = "Return to Main Menu"

[node name="FinishFail" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="FinishFail"]
margin_left = 64.0
margin_top = 56.0
margin_right = 256.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="FinishFail/VBoxContainer"]
margin_right = 192.0
margin_bottom = 19.0
text = "Level Failed :(
Better luck next time!"
align = 1

[node name="HSeparator" type="HSeparator" parent="FinishFail/VBoxContainer"]
margin_top = 23.0
margin_right = 192.0
margin_bottom = 33.0

[node name="Again" type="Button" parent="FinishFail/VBoxContainer"]
margin_top = 37.0
margin_right = 192.0
margin_bottom = 57.0
text = "Try Again"

[node name="Menu" type="Button" parent="FinishFail/VBoxContainer"]
margin_top = 61.0
margin_right = 192.0
margin_bottom = 81.0
text = "Return to Main Menu"

[connection signal="pressed" from="FinishSuccess/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="FinishSuccess/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="FinishFail/VBoxContainer/Again" to="." method="_on_Again_pressed"]
[connection signal="pressed" from="FinishFail/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
